--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,5 @@ steps:
     curl -X PUT "$(DTRACK_API_URL)/api/v1/bom" \
       -H "X-Api-Key: $(DTRACK_API_KEY)" \
       -H "Content-Type: application/json" \
-      --data-binary "@download/MonProjet/sbom.json"
+      --data-binary "@Downloads/MonProjet/sbom.json"
   displayName: 'Upload SBOM to Dependency-Track'
